# docs/swagger/swagger.json
@@ -223,26 +223,7 @@
                 }
             }
         },
-        "/api/v1/tags/import": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "上传图片",
-                "parameters": [
-                    {}
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"code\":200,\"data\":{\"image_save_url\":\"upload/images/96a.jpg\", \"image_url\": \"http://...\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v2/getCourse": {
+        "/api/v1/getCourse": {
             "post": {
                 "description": "获取单个课程description",
                 "produces": [
@@ -284,6 +265,25 @@
                     },
                     "20000": {
                         "description": "{\"code\":20000,\"data\":{},\"msg\":\"参数错误\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/tags/import": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "上传图片",
+                "parameters": [
+                    {}
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"data\":{\"image_save_url\":\"upload/images/96a.jpg\", \"image_url\": \"http://...\"}",
                         "schema": {
                             "type": "string"
                         }
